--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="zh-cn">
     <meta charset="UTF-8">
-    <title>index.html</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/home.css"/>
 </head>
 <body>
@@ -19,7 +19,7 @@
         data-main="hello.js">
 </script>
 
-h1{Lorem Ipsum}
+<h1>Lorem Ipsum</h1>
 
 
 </body>
