整理js 文件结构

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
 <!--4. 增加了 data-main 属性-->
 <script
         coolie
-        src="./coolie.min.js"
+        src="app/coolie.min.js"
         data-config="./coolie-config.js"
-        data-main="hello.js">
+        data-main="main.js">
 </script>
 
 <h1>Lorem Ipsum</h1>
