整理js 文件结构

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <!--4. 增加了 data-main 属性-->
 <script
         coolie
-        src="app/coolie.min.js"
+        src="js/coolie.min.js"
         data-config="./coolie-config.js"
         data-main="main.js">
 </script>
