--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head lang="zh-cn">
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="css/home.css"/>
+    <link rel="stylesheet" href="static/css/home.css"/>
 </head>
 <body>
 
