初始化demo数据

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         coolie
         src="static/js/coolie.min.js"
         data-config="./coolie-config.js"
-        data-main="main.js">
+        data-main="app.js">
 </script>
 
 <h1>Lorem Ipsum</h1>
